<resources>
    <string name="app_name">Contact Book</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back!</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password">Password</string>
    <string name="user_name_or_email">User Name or Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">Add New</string>
    <string name="contact_location">contact location</string>
    <string name="name">Name</string>
    <string name="address">address</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="save">Save</string>
    <string name="set_address_on_map">Set address on map</string>
</resources>